Project

General

Profile

Actions

Bug #42759

closed

mds: inode lock stuck at unstable state after evicting client

Added by Zheng Yan over 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #42949: nautilus: mds: inode lock stuck at unstable state after evicting clientResolvedNathan CutlerActions
Copied to CephFS - Backport #42950: mimic: mds: inode lock stuck at unstable state after evicting clientRejectedActions
Actions #1

Updated by Patrick Donnelly over 4 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Zheng Yan
  • Target version set to v15.0.0
  • Start date deleted (11/12/2019)
  • Source set to Development
  • Pull request ID set to 31548
  • Component(FS) MDS added
Actions #2

Updated by Patrick Donnelly over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42949: nautilus: mds: inode lock stuck at unstable state after evicting client added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42950: mimic: mds: inode lock stuck at unstable state after evicting client added
Actions #5

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF