mds: properly evaluate unstable locks when evicting client

make sure we call Locker::eval_gather() for inodes in 'to_eval' list.

Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
Fixes: https://tracker.ceph.com/issues/42759
(cherry picked from commit 06f175f34dbec471e5c31b00f76ccce727f3ff3b)